# rust-zkp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
docs/: backend_basics.md  backend_post_endpoints.md  batch_processing.md  cors_explained.md  deploy_render.md  ex1_preimage.md  ex2_sum.md  ex3_threshold.md  ex4_membership.md  mempool_and_spawn.md  mini_rollup.md  persistence.md  rate_limiting.md  rust_async_primer.md  serde_traits.md  websocket_broadcast.md  zk_high_level.md  zkp_in_blockchain.md
src/: account.rs  batch.rs  bits.rs  commitment.rs  dto.rs  error.rs  lib.rs  main.rs  merkle.rs  serde_helpers.rs  sigma.rs  state.rs  storage.rs  transaction.rs  transcript.rs  wasm.rs
web/: astro.config.mjs  index.html  package-lock.json  package.json
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/pages/demos/: accounts.astro  bit-or.astro  commit.astro  index.astro  mempool.astro  merkle.astro  range.astro  send.astro  sigma.astro
web/src/pages/docs/: deploy_render.md  ex1_preimage.md  ex4_membership.md  index.astro  persistence.md  rust_async_primer.md  zkp_in_blockchain.md
web/src/pages/notes/: backend_basics.md  backend_post_endpoints.md  batch_processing.md  cors_explained.md  ex2_sum.md  ex3_threshold.md  index.astro  mempool_and_spawn.md  mini_rollup.md  rate_limiting.md  serde_traits.md  websocket_broadcast.md  zk_high_level.astro
