[package]
name = "zkp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bincode = "1.3"
clap = { version = "4.6.1", features = ["derive"] }
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-traits = "0.2.19"
rand = "0.8"
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sled = "0.34.7"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
