[package]
name = "zkp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:sled", "dep:rayon", "dep:reqwest", "dep:bincode", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:tower_governor"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
# Always available (WASM-safe)
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-traits = "0.2.19"
rand = "0.8"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }


# Server-only
axum = { version = "0.8.9", features = ["ws"], optional = true }
tokio = { version = "1.52.1", features = ["full"], optional = true }
sled = { version = "0.34.7", optional = true }
rayon = { version = "1.12.0", optional = true }
reqwest = { version = "0.13.3", features = ["json"], optional = true }
bincode = { version = "1.3", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tower_governor = { version = "0.8.0", optional = true }

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }
